tests-integration/tests/roundtrip/invalid/semantic/typecheck/int_var_in_set_expr/tree-sitter.expected-error.txt
tests/roundtrip/invalid/semantic/typecheck/int_var_in_set_expr/input.essence:3:11:
  |
3 | such that i subset s
  |           ^
Type error: i
	Expected: set
	Got: int